tests/neg/unused-type.scala
class Test {
  unused type T // error
}
